--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: "3.3"
 
 networks:
   internal:
@@ -6,61 +6,85 @@ networks:
     external: true
 
 services:
-  reverseproxy:
+  traefik:  # https://traefik.io/blog/traefik-2-0-docker-101-fc2893944b9d/
+    image: "traefik:v2.0.0"
     container_name: traefik
-    image: traefik
-    restart: always
+    command:
+      - --entrypoints.web.address=:80
+      - --entrypoints.websecure.address=:443
+      - --providers.docker=true
+      - --api # Mutually exclusive with api.insecure
+      # - --api.insecure # Don't do that in production
+      # - --log.level=DEBUG
+      - --certificatesresolvers.le.acme.email=${ACME_EMAIL}
+      - --certificatesresolvers.le.acme.storage=/acme.json
+      - --certificatesresolvers.le.acme.tlschallenge=true
+      - --serversTransport.insecureSkipVerify=true  # Allow self-signed certs for https backends 
+    labels:
+      # reusable basic auth
+      - traefik.http.middlewares.saytosid_auth.basicauth.users=${AUTH_PASSWORD}
+
+      # global redirect to https
+      - traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https      
+      - "traefik.http.routers.redirs.rule=hostregexp(`{host:.+}`)"
+      - "traefik.http.routers.redirs.entrypoints=web"
+      - "traefik.http.routers.redirs.middlewares=redirect-to-https"
+
+      # Dashboard
+      - traefik.http.routers.traefik.rule=Host(`traefik.${DOMAIN}`)
+      - traefik.http.services.traefik.loadbalancer.server.port=8080
+      - traefik.http.routers.traefik.service=api@internal
+      - traefik.http.routers.traefik.middlewares=saytosid_auth
+      - traefik.http.routers.traefik.tls.certresolver=le
+      - traefik.http.routers.traefik.entrypoints=websecure
     ports:
       - "80:80"
       - "443:443"
     expose:
       - "8080"
-    labels:
-      traefik.enable: true
-      traefik.frontend.rule: "Host:traefik.saytosid.duckdns.org"
-      # get md5 from htpasswd or http://www.htaccesstools.com/htpasswd-generator/
-      # and then double all $ to $$ to avoid docker-compose 
-      traefik.frontend.auth.basic: "username:passwordMD5"
-      traefik.port: 8080
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock:ro
-      - ./traefik.toml:/traefik.toml
-      - ./acme.json:/acme.json
+      - "/var/run/docker.sock:/var/run/docker.sock:ro"
+      - type: bind
+        source: ${PWD}/acme.json
+        target: /acme.json
+    networks:
+      - web
+  
+  whoami:
+    image: containous/whoami:v1.3.0
+    labels:
+      - traefik.http.routers.whoami.rule=Host(`whoami.${DOMAIN}`)
+      - traefik.http.routers.whoami.tls.certresolver=le
+      - traefik.http.routers.whoami.entrypoints=websecure
     networks:
       - web
 
-  openvpn-as:
-    # READ Application Setup: https://hub.docker.com/r/linuxserver/openvpn-as/
-    image: linuxserver/openvpn-as
-    container_name: openvpn-as
-    restart: always
+  wireguard:
+    image: linuxserver/wireguard
+    container_name: wireguard
     cap_add:
       - NET_ADMIN
+      - SYS_MODULE
     environment:
       - PUID=1000
       - PGID=1000
       - TZ=Europe/London
-      - INTERFACE=
+      - SERVERURL=auto
+      - SERVERPORT=1194
+      - PEERS=5
+      - PEERDNS=auto
     volumes:
-      - ./openvpn-config:/config
+      - ./wireguard/config:/config
+      - /lib/modules:/lib/modules
     ports:
-      - 9443:9443/tcp
-      - 1194:1194/udp
-      - 943:943/tcp  # Admin web UI
-    restart: unless-stopped
-    labels:
-      - "traefik.enable=true"
-      - "traefik.backend=openvpn-as"
-      - "traefik.docker.network=web"
-      - "traefik.frontend.rule=Host:vpn.saytosid.duckdns.org"
-      - "traefik.port=943"
-      - "traefik.protocol=https"
-    networks:
-      - web
+      - 1194:51820/udp
+    sysctls:
+      - net.ipv4.conf.all.src_valid_mark=1
+    restart: always
 
   pihole:
-    container_name: pihole
     image: pihole/pihole:latest
+    container_name: pihole
     restart: always
     ports:
       - "53:53/tcp"
@@ -70,8 +94,8 @@ services:
       - "80"
       - "443"
     environment:
-      TZ: 'Europe/London'
-      # WEBPASSWORD: 'set a secure password here or it will be random'
+      - TZ=Europe/London
+      - WEBPASSWORD=${PIHOLE_PWD}
     volumes:
        - './etc-pihole/:/etc/pihole/'
        - './etc-dnsmasq.d/:/etc/dnsmasq.d/'
@@ -81,11 +105,11 @@ services:
     cap_add:
       - NET_ADMIN
     labels:
-      - "traefik.enable=true"
-      - "traefik.backend=pihole"
-      - "traefik.docker.network=web"
-      - "traefik.frontend.rule=Host:ph.saytosid.duckdns.org"
-      - "traefik.port=80"
+      - traefik.http.routers.pihole.rule=Host(`pihole.${DOMAIN}`)
+      - traefik.http.services.pihole.loadbalancer.server.port=80
+      - traefik.http.routers.pihole.tls.certresolver=le
+      - traefik.http.routers.pihole.entrypoints=websecure
+      - "traefik.http.routers.pihole.middlewares=saytosid_auth"
     networks:
       - web
 
@@ -93,73 +117,12 @@ services:
   duckdns:
     image: linuxserver/duckdns
     container_name: duckdns
-    restart: always
     environment:
       - TZ=Europe/London
-      - SUBDOMAINS=
-      - TOKEN=
-    restart: unless-stopped
-    depends_on:
-      - pihole
+      - SUBDOMAINS=${DUCKDNS_SUBDOMAIN}
+      - TOKEN="${DUCKDNS_TOKEN}"
+    volumes:
+      - /path/to/appdata/config:/config
+    restart: always
     networks:
       - web
-
-  nextcloud:
-    container_name: nextcloud
-    image: wonderfall/nextcloud
-    restart: always
-    depends_on:
-      - nextcloud-db           # If using MySQL
-    environment:
-      - UID=1000
-      - GID=1000
-      - UPLOAD_MAX_SIZE=10G
-      - APC_SHM_SIZE=128M
-      - OPCACHE_MEM_SIZE=128
-      - CRON_PERIOD=15m
-      - TZ=Europe/Berlin
-      - DOMAIN=localhost
-      - DB_TYPE=mysql
-      - DB_NAME=nextcloud
-      - DB_USER=nextcloud
-      - DB_PASSWORD=
-      - DB_HOST=nextcloud-db
-    volumes:
-      - ./nextcloud/data:/data
-      - ./nextcloud/config:/config
-      - ./nextcloud/apps:/apps2
-      - ./nextcloud/themes:/nextcloud/themes
-    expose:
-      - 8888
-    labels:
-      - "traefik.enable=true"
-      - "traefik.backend=nextcloud"
-      - "traefik.docker.network=web"
-      - "traefik.frontend.rule=Host:cloud.saytosid.duckdns.org"
-      - "traefik.port=8888"
-    depends_on:
-      - nextcloud-db
-    networks:
-      - web
-      - internal
-
-  # If using MySQL
-  nextcloud-db:
-    container_name: nextcloud-db
-    image: mariadb:10
-    restart: always
-    volumes:
-      - ./nextcloud/db:/var/lib/mysql
-    environment:
-      - MYSQL_ROOT_PASSWORD=
-      - MYSQL_DATABASE=nextcloud
-      - MYSQL_USER=nextcloud
-      - MYSQL_PASSWORD=
-    expose:
-      - 3306
-    networks:
-      - internal
-
-
-
- 
