--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -113,7 +113,7 @@ services:
       - traefik.http.services.pihole.loadbalancer.server.port=80
       - traefik.http.routers.pihole.tls.certresolver=le
       - traefik.http.routers.pihole.entrypoints=websecure
-      - "traefik.http.routers.pihole.middlewares=saytosid_auth"
+      - traefik.http.routers.pihole.middlewares=saytosid_auth
     networks:
       - web
 
@@ -150,6 +150,28 @@ services:
       - web
       - internal
 
+  cloud9:
+    image: linuxserver/cloud9
+    container_name: cloud9
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Europe/London
+    volumes:
+      - ./cloud9-data/code:/code #optional
+      - /var/run/docker.sock:/var/run/docker.sock # Used to run docker or compose commands
+    expose:
+      - 8000
+    restart: always
+    labels:
+      - traefik.http.routers.cloud9.rule=Host(`code.${DOMAIN}`)
+      - traefik.http.services.cloud9.loadbalancer.server.port=8000
+      - traefik.http.routers.cloud9.tls.certresolver=le
+      - traefik.http.routers.cloud9.entrypoints=websecure
+      - traefik.http.routers.cloud9.middlewares=saytosid_auth
+    networks:
+      - web
+    
 
   duckdns:
     image: linuxserver/duckdns
